fix(radio_checkbox): alignment fix

--- a/src/components/reusable/checkbox/checkbox.scss
+++ b/src/components/reusable/checkbox/checkbox.scss
@@ -7,7 +7,7 @@
 
 label {
   display: inline-flex;
-  align-items: center;
+  gap: 10px;
   width: 100%;
   position: relative;
 
@@ -20,7 +20,6 @@ span {
   order: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-left: 10px;
 }
 
 input {
@@ -31,7 +30,7 @@ input {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  margin: 0px;
+  margin: 0;
   width: 16px;
   height: 16px;
   border: 2px solid var(--kd-color-border-ui);
